Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,45 +1,3 @@
-@book{buxmann2015softwareindustrie,
-  title={Die Softwareindustrie: {\"O}konomische Prinzipien, Strategien, Perspektiven},
-  author={Buxmann, Peter and Diefenbach, Heiner and Hess, Thomas},
-  year={2015},
-  publisher={Springer-Verlag}
-}
-
-@article{koppe2021herausforderungen,
-  title={Herausforderungen und Potenziale von KI-gest{\"u}tzter visueller Inspektion in der Elektronikindustrie},
-  author={Koppe, Timo and Schatz, Jonas and Hornung, Thomas},
-  journal={Springer Books},
-  pages={65--80},
-  year={2021},
-  publisher={Springer}
-}
-
-@inproceedings{emse-03339298,
-  TITLE = {{Identification of Service Platform Requirements from Value Propositions: A Service Systems Engineering Method}},
-  AUTHOR = {Ege Adali, Onat and Ozkan, Baris and Turetken, Oktay and Grefen, Paul},
-  URL = {https://hal-emse.ccsd.cnrs.fr/emse-03339298},
-  BOOKTITLE = {{22nd IFIP WG 5.5 Working Conference on VIRTUAL ENTERPRISES, PRO-VE 2021}},
-  ADDRESS = {Saint-Etienne, France},
-  EDITOR = {Luis M. Camarinha-Matos and Xavier Boucher and Hamideh Afsarmanesh},
-  PAGES = {12p},
-  YEAR = {2021},
-  MONTH = Nov,
-  KEYWORDS = {Service   Systems  Engineering ; Service   Platform ; Requirements Engineering},
-  HAL_ID = {emse-03339298},
-  HAL_VERSION = {v1},
-}
-
-@article{arbelaez2010contour,
-  title={Contour detection and hierarchical image segmentation},
-  author={Arbelaez, Pablo and Maire, Michael and Fowlkes, Charless and Malik, Jitendra},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
-  volume={33},
-  number={5},
-  pages={898--916},
-  year={2010},
-  publisher={IEEE}
-}
-
 @article{DeloneMcLean2003ISSuccessTenYearUpdate,
     author = {Delone, McLean},
     title = {The DeLone and McLean Model of Information Systems Success: A Ten-Year Update},
@@ -53,12 +11,88 @@
   journal = {MIS Quarterly},
   volume = {13},
   number = {3},
-  pages = {319--340},
   year = {1989},
   publisher = {Management Information Systems Research Center, University of Minnesota}
 }
 
-@misc{citation-key,
-    key = ,
-    note = 
+@inproceedings{Sahin2024LLM_proceedings,
+  author    = {{\c{S}}ahin, G{\"u}rkan and Varol, Karya and Pak, Burcu Kuleli},
+  title     = {{LLM and RAG-Based Question Answering Assistant for Enterprise Knowledge Management}},
+  booktitle = {2024 9th International Conference on Computer Science and Engineering (UBMK)},
+  year      = {2024},
+  publisher = {IEEE}
+}
+
+@misc{Brandt2023,
+  title        = {Wie lange brauchen Online-Dienste, um eine Million Menschen zu erreichen},
+  author       = {Brandt, Mathias},
+  year         = 2023,
+  note         = {\url{[https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/](https://de.statista.com/infografik/29195/zeitraum-den-online-dienste-gebraucht-haben-um-eine-million-nutzer-zu-erreichen/)} [Zugriff am: 2025-07-31]}
+}
+
+@misc{Huber2025,
+  title        = {ChatGPT Nutzerzahlen (Stand Juni 2025)},
+  author       = {Huber, Sandro},
+  year         = 2025,
+  note         = {\url{[https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen](https://www.sh-digital.ch/blog/chatgpt-nutzerzahlen)} [Zugriff am: 2025-07-31]}
+}
+
+@misc{McKinsey2023,
+  title        = {GenAI's implications for Germany's labor market},
+  author       = {McKinsey & Company},
+  year         = 2023,
+  note         = {\url{[https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf](https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf)} [Zugriff am: 2025-07-31]}
+}
+
+@misc{GoogleCloudRAG,
+  title        = {What is Retrieval-Augmented Generation (RAG)?},
+  author       = {{Google Cloud}},
+  year         = {2025},
+  howpublished = {\url{https://cloud.google.com/use-cases/retrieval-augmented-generation?hl=en}},
+  note         = {Accessed: 2025-07-31}
+}
+
+@article{Bruckhaus2024RAG,
+  author  = {Bruckhaus, Tilmann},
+  title   = {RAG Does Not Work for Enterprises},
+  year    = {2024},
+  journal = {arXiv preprint arXiv:2406.04369}
+}
+
+@inproceedings{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024,
+    title={Seven failure points when engineering a retrieval augmented generation system},
+    DOI={10.1145/3644815.3644945},
+    journal={Proceedings of the IEEE/ACM 3rd International Conference on AI Engineering - Software Engineering for AI},
+    author={Barnett, Scott and Kurniawan, Stefanus and Thudumu, Srikanth and Brannelly, Zach and Abdelrazek, Mohamed},
+    year={2024},
+    month={Apr}
+}
+
+@inproceedigs{Es_James_Espinosa_Anke_Schockaert_2024,
+    title={Ragas: Automated Evaluation of retrieval augmented generation},
+    DOI={10.18653/v1/2024.eacl-demo.16},
+    journal={Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
+    author={Es, Shahul and James, Jithin and Espinosa Anke, Luis and Schockaert, Steven},
+    year={2024},
+}
+
+@inproceedings{Saad_Falcon_Khattab_Potts_Zaharia_2024,
+    title={Ares: An automated evaluation framework for retrieval-augmented generation systems},
+    DOI={10.18653/v1/2024.naacl-long.20},
+    journal={Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
+    author={Saad-Falcon, Jon and Khattab, Omar and Potts, Christopher and Zaharia, Matei},
+    year={2024}
+} 
+
+@article{Peffers01122007,
+    author = {Ken Peffers and Tuure Tuunanen and Marcus A. Rothenberger and Samir Chatterjee},  
+    title = {A Design Science Research Methodology for Information Systems Research},
+    journal = {Journal of Management Information Systems},
+    volume = {24},
+    number = {3},
+    year = {2007},
+    publisher = {Routledge},
+    doi = {10.2753/MIS0742-1222240302},
+    URL = {https://doi.org/10.2753/MIS0742-1222240302},
+    eprint = {https://doi.org/10.2753/MIS0742-1222240302}
 }
