--- a/thesis.tex
+++ b/thesis.tex
@@ -199,11 +199,11 @@ KMS                 &   Knowledge Management System \\
 \pagenumbering{arabic}
 
 \chapter{Introduction}
-ChatGPT reached 1 million users within 5 days after its launch in 2022. With this, it became the fastest-growing application in history and provides benefits for 800 million weekly users today. GenAI not only bares high potential for the private sector but also for the modern business world. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to \EUR{585} billion by 2040. Furthermore For enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology by connecting large language models (LLMs) to company-specific proprietary knowledge bases. Connecting and bounding LLMs to the proprietary knowledge bases not only lets them access up-to-date company data but also improves transparency and avoids hallucinations since the company data functions as the ground truth.
+ChatGPT reached 1 million users within 5 days after its launch in 2022 which was only exceeded by Threads in 2023 \parencite{Brandt2023}. Today ChatGPT provides benefits for 800 million weekly users \parencite{Huber2025} and thus has become an established Generative AI (GenAI) tool. GenAI bares high potential not only for the private sector but also for the modern business world. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to \EUR{585} billion by 2040 \parencite[p.~12]{McKinsey2023}. Furthermore for enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology by connecting large language models (LLMs) to company-specific proprietary knowledge bases \parencite[p.~6]{Sahin2024LLM_proceedings}. Connecting and bounding LLMs to proprietary knowledge bases not only enables them to access up-to-date company data but also enhances transparency and reduces the likelihood of hallucinations, as the company data serves as the ground truth \parencite{GoogleCloudRAG}.
 
-However, the success of enterprise RAG applications is not guaranteed and highly depends on the data the RAG system uses. RAG systems can be unstable, leading to low-quality results. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
+However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[p.~6--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~4]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
-This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard created to automatically measure the success of an enterprise GenAI application. Following the information systems success model by DeLone and McLean, success can be measured using three quality metrics - the information quality, the system quality and the service quality. However most RAG evaluation frameworks like RAGAS or ARES only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology to conceptualize and implement a dashboard grounded in a holistic view.
+This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the information systems success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, success can be measured using three quality metrics - the information quality, the system quality and the service quality. However most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers01122007} to conceptualize and implement a dashboard grounded in a holistic view.
 %---------------------------------------------------------------------%
 %------------------------------ Theoretical Background ---------------%
 %---------------------------------------------------------------------%
@@ -242,7 +242,7 @@ Drawing parallels between the models, we can associate the ISSM's specific quali
 For this thesis, the ISSM provides a more practical framework. It offers specific, measurable dimensions rather than the TAM's general concept of \textit{external variables}. Therefore, we will use the ISSM to develop and categorize the quality measurements for the RAG application.
 
 \newpage
-\section{Knowledge Management Systems acceptance success}
+\section{Knowledge Management System's success}
 Now that we have a solid understanding of IS acceptance and success in general we are going to have a closer look at knowledge management systems (KMS). We'll start of with some definitions that will help us understand what knowledge, knowledge management (KM) and knowledge management systems (KMS) are. "Knowledge is an evolving mix of framed experience, values, contextual information, and expert insight that provides a framework for evaluating and incorporating new experiences and information". This means that knowledge is a key key factor in the decision-making processes e.g. in enterprises. KM on the other hand "is the practice of selectively applying knowledge from previous experiences of decision making to current and future decision making activities with the express purpose of improving the organization’s effectiveness". KMS in the end can be defined as "IT-based systems developed to support and enhance the organizational processes of knowledge creation, storage/retrieval, transfer and application". Overall we can conclude that KMS are systems that support the decision-making process e.g. in a company by managing and selectively providing knowledge to their users. Since KMS are by definition a specialized form of IS we can simply apply the ISSM to them.\\
 Following Jennex and Olfman we can extend the three quality factors to gain a better understanding
 of knowledge management success.\\
@@ -657,13 +657,10 @@ In conclusion, the developed artifact represents a significant step towards the 
 %---------------------------- Conclusion -----------------------------%
 %---------------------------------------------------------------------%
 \chapter{Conclusion}
-\section{Summary of the Work}
 The objective of this thesis was to design and implement a comprehensive system for measuring the success of a sophisticated, enterprise-level Retrieval-Augmented Generation (RAG) application. The project began with a series of collaborative workshops with the development team to conceptualize a suite of analytics features tailored to the specific needs of the RAG system. Following this, a significant portion of these features were technically implemented, resulting in a fully integrated analytics dashboard within the application's admin panel. The technical solution was built on the Google Cloud Platform, leveraging BigQuery for scalable data warehousing, Cloud Run for efficient data processing, and a Vue-based frontend for interactive data visualization.
 
-\section{Key Results and Findings}
 The successfully implemented system provides multifaceted insights into system performance, information quality, and user behavior. Key implemented features include dashboards for \textbf{Answer Quality} and \textbf{Document Quality}, which use AI-based evaluation to provide metrics like relevance and faithfulness. Furthermore, dashboards for \textbf{Topic Map} and \textbf{Task Type} analysis were developed to offer a deeper understanding of user interests and intents. These individual views were then combined into powerful analytical tools to correlate quality with specific topics and task types, allowing administrators to pinpoint knowledge gaps and areas for improvement. A cost analysis concluded that these new features add a manageable, maximum overhead of approximately \textbf{20\%} to the LLM-related costs, which is not expected to significantly impact the system's total operational budget.
 
-\section{Evaluation and Future Work}
 The implemented analytics dashboard was presented to the development team for evaluation. The feedback was overwhelmingly positive, with the team confirming the high value and potential of the features for monitoring and improving the RAG system. The design, interactivity, and visual appeal of the dashboards were particularly praised.
 
 The constructive feedback also highlighted several key areas for future enhancement. The most prominent theme was the need to improve \textbf{clarity and user guidance} for non-technical administrators through more detailed in-app explanations, examples, and metric definitions. A second major theme was the desire for greater \textbf{actionability}, primarily through the implementation of drill-down features that would allow users to trace an aggregated metric back to the specific documents or conversations that influenced it.
