Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -39,7 +39,7 @@
 
 @misc{McKinsey2023,
   title        = {GenAI's implications for Germany's labor market},
-  author       = {McKinsey & Company},
+  author       = {McKinsey \& Company},
   year         = 2023,
   note         = {\url{[https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf](https://www.mckinsey.com/de/~/media/mckinsey/locations/europe\%20and\%20middle\%20east/deutschland/news/presse/2023/2023-11-24\%20genai\%20implikationen\%20deutschlands\%20arbeitsmarkt/en_mckinsey_genai_implications_germany_labor_market.pdf)} [Zugriff am: 2025-07-31]}
 }
