--- a/thesis.tex
+++ b/thesis.tex
@@ -203,7 +203,7 @@ ChatGPT reached 1 million users within 5 days after its launch in 2022 which was
 
 However, the success of enterprise RAG applications typically requires some effort, including the use of specialized RAG pipelines or connecting various APIs to the RAG system, to implement them effectively \parencite[p.~6--7]{Bruckhaus2024RAG}. Common failure points include the system failing to provide an answer even though the information is available, generating a false answer by misinterpreting context or returning an incomplete response \parencite[p.~4]{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. As organizations invest in and deploy these powerful but complex systems, a critical management challenge arises: How can the success of a GenAI application be measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
-This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the information systems success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, success can be measured using three quality metrics - the information quality, the system quality and the service quality. However most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers01122007} to conceptualize and implement a dashboard grounded in a holistic view.
+This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard designed to measure the success of an enterprise GenAI application automatically. Following the Information Systems Success Model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}, success can be measured using three quality metrics: \textit{information quality}, \textit{system quality}, and \textit{service quality}. However, most RAG evaluation frameworks like RAGAS \parencite{Es_James_Espinosa_Anke_Schockaert_2024} or ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024} only include the information quality provided by the system. To move beyond this narrow perspective on IS success, this study employs a Design Science Research methodology following \cite{Peffers01122007} to conceptualize and implement a dashboard based on a more holistic perspective.
 %---------------------------------------------------------------------%
 %------------------------------ Theoretical Background ---------------%
 %---------------------------------------------------------------------%
@@ -635,22 +635,26 @@ Despite the limitations, this thesis offers significant implications for both pr
 
 \paragraph{Practical Implications} The primary contribution for practice is a ready-to-use analytics tool that empowers organizations to move beyond anecdotal evidence and make data-driven decisions about their enterprise GenAI systems. Use Case administrators can now:
 \begin{enumerate}
-    \item \textbf{Identify and address knowledge gaps} by seeing which topics are frequently asked about but receive low-quality answers.
-    \item \textbf{Optimize user workflows} by understanding the most common task types and creating targeted Quick Actions.
-    \item \textbf{Justify investments} in data maintenance or user training by demonstrating a clear link between these activities and an improvement in quality scores over time.
+    \item \textbf{Identify and address knowledge gaps within a use case} by seeing which topics are frequently requested but receive low-quality answers.
+    \item \textbf{Optimize user workflows} by understanding the most common task types used and how they are used (e.g., for which topics). They can adapt the use cases to them (e.g., with use case metadata supporting the task type or suitable quick actions).
+    \item \textbf{Analyze the impact of their decisions} by using time series diagrams to identify influential events and match them against the changes they made.
+    \item \textbf{Guide users to better outcomes} by analyzing their behavior. For example, suppose a user asks about a topic in a use case that does not support the topic. In that case, the administrator can recommend a more suitable one to ensure they receive a high-quality answer.
 \end{enumerate}
-The cost analysis further showed that the financial impact of such an analytics suite is manageable, adding approximately 20\% to the LLM-related costs, which is a justifiable expense for the significant insights gained.
+The cost analysis further showed that the financial impact of such an analytics suite is manageable, adding approximately 20\% to the LLM-related costs, which is a justifiable expense for the insights gained.
 
-\paragraph{Theoretical Implications} This work contributes to the academic discourse by demonstrating a practical application and operationalization of the IS Success Model in the novel context of enterprise RAG systems. It shows how the abstract dimensions of the model can be translated into specific, measurable KPIs (e.g., "Faithfulness" as a metric for Information Quality). Furthermore, the DSR approach used in this thesis provides a template for how to systematically design, build, and evaluate such management tools in close collaboration with industry practitioners, bridging the gap between theory and practice.
+\paragraph{Theoretical Implications} This work contributes to the academic discourse by demonstrating a practical application and operationalization of the IS Success Model in the new context of enterprise RAG systems. It shows how the abstract dimensions of the model can be translated into specific, measurable KPIs (e.g., "Faithfulness" as a metric for Information Quality). By employing the Design science research methodology, a well-structured framework has been used to create new artifacts reliably. Furthermore, this work adopts a new perspective on evaluating RAG applications shaped by the IS Success Model, which has not been used in prior research. Rather than focusing only on RAG quality, a more holistic perspective is taken — based on the three quality dimensions of the ISSM — which in turn guides the development of a dashboard that allows use case administrators to perform comprehensive analyses.
 
 \section{Outlook and Future Research}
 This thesis serves as a strong foundation and opens up several avenues for future research and development.
-\begin{itemize}
-    \item \textbf{Long-Term User Study:} The most important next step is to conduct a long-term study with actual Use Case administrators using the dashboards in their daily work. This would allow for an evaluation of the artifact's real-world impact on system success and would provide invaluable feedback for further refinement.
-    \item \textbf{Refining AI-based Evaluation:} Future research could focus on improving the reliability of the automated quality evaluation. This could involve developing more sophisticated evaluation pipelines, for instance, by incorporating a "self-reflection" step where the AI judge must justify its score, or by fine-tuning smaller, specialized models for the evaluation task to reduce costs and improve consistency.
-    \item \textbf{Closing the Loop - Actionability:} A key suggestion from the feedback was to enhance actionability. Future work could focus on "closing the loop" by integrating the analytics dashboard more tightly with the RAG system's configuration. For example, a "one-click" feature could allow an administrator to flag a low-performing topic, automatically creating a task for a content expert to review and update the relevant documents.
-    \item \textbf{Expanding the Scope:} Finally, the unimplemented features from the roadmap, such as \textit{Error Rate Monitoring} and \textit{Knowledge Gap Detection}, present clear next steps for expanding the dashboard's functionality to provide an even more holistic view of GenAI success.
-\end{itemize}
+
+\textbf{Long-Term User Study:} The most important next step is to conduct a long-term study with actual Use Case administrators using the dashboards in their daily work. This would allow for an evaluation of the artifact's real-world impact on system success and would provide invaluable feedback for further refinement.\\
+\\
+\textbf{Refining AI-based Evaluation:} Future research could focus on improving the reliability of the automated quality evaluation. This could involve developing more sophisticated evaluation pipelines, for instance, by incorporating a "self-reflection" step where the AI judge must justify its score, or by fine-tuning smaller, specialized models for the evaluation task to reduce costs and improve consistency.\\
+\\
+\textbf{Closing the Loop - Actionability:} A key suggestion from the feedback was to enhance actionability. Future work could focus on "closing the loop" by integrating the analytics dashboard more tightly with the RAG system's configuration. For example, a "one-click" feature could allow an administrator to flag a low-performing topic, automatically creating a task for a content expert to review and update the relevant documents.\\
+\\
+\textbf{Expanding the Scope:} Finally, the unimplemented features from the roadmap, such as \textit{Error Rate Monitoring} and \textit{Knowledge Gap Detection}, present clear next steps for expanding the dashboard's functionality to provide an even more holistic view of GenAI success.\\
+\\
 In conclusion, the developed artifact represents a significant step towards the systematic and automated evaluation of enterprise GenAI applications. The journey from raw data to actionable insight is complex, but this work has laid a solid and promising foundation for future exploration and improvement.
 
 %---------------------------------------------------------------------%
