Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -624,7 +624,7 @@ The limitations of this thesis can be categorized into methodological and techni
 
 \paragraph{Methodological Limitations}
 \begin{itemize}
-    \item \textbf{Evaluation Scope:} The evaluation of the artifact was conducted exclusively with the internal development team. While their feedback is valuable for assessing technical feasibility and the conceptual alignment with developer goals, it does not represent the perspective of the end-users -- the Use Case administrators. An end-user study in a real-world scenario should be the next step to validate and improve the dashboard's practical usefulness. However, this has not been possible during the thesis due to time constraints.
+    \item \textbf{Evaluation Scope:} The evaluation of the artifact was conducted exclusively with the internal development team. While their feedback is valuable for assessing technical feasibility and the conceptual alignment with developer goals, it does not represent the perspective of the end-users -- the Use Case administrators. An end-user study in a real-world scenario should be the next step to validate and improve the dashboard's practical usefulness and apply DSR best practices. However, this was not possible during the thesis due to time constraints.
     \item \textbf{Partial Implementation}: Also, due to the time constraints of the thesis, not all concepts from the initial workshops could be implemented. Features like \textit{Response Time Analysis}, \textit{Error Rate Monitoring}, and \textit{Knowledge Gap Detection} were conceptualized but not realized. This means the implemented artifact provides a view that is heavily focused on Information Quality, while System Quality and Service Quality are less comprehensively covered.
 \end{itemize}
 
